# DemoSmartClient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp
